--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="hero-area">
             <div class="hero-text">
-                <h1>ELBAKOURI Allal</h1>
+                <h1>ELBAKOURI </h1>
                 <p>Full Stack Developer</p>
                 <div class="button"><a href="#about-me">About me</a></div>
             </div>
